# AgentHarness

./: .gitignore  PROPOSAL.md  README.md  README_CN.md  pyproject.toml
agent_harness/: __init__.py  harness.py
agent_harness/backends/: __init__.py  adapter.py
agent_harness/cli/: main.py
agent_harness/core/: __init__.py  action.py  env.py  tool.py  trajectory.py
agent_harness/debug/: __init__.py  debugger.py
agent_harness/envs/: __init__.py  code_exec.py  math.py  tool_call.py
agent_harness/rewards/: __init__.py  base.py  credit.py
agent_harness/rewards/builtin/: code.py  format.py  judge.py  match.py  tool.py
agent_harness/store/: __init__.py  curriculum.py  trajectory.py
examples/: code_generation.py  math_reasoning.py  tool_calling_curriculum.py
tests/: test_core.py  test_debugger.py  test_envs.py  test_harness.py  test_integration.py  test_rewards.py  test_store.py
